landing and profile

--- a/crypto-zoo-save/index.html
+++ b/crypto-zoo-save/index.html
@@ -16,7 +16,7 @@
       <header id="header" class="header">
         <div class="wr" style="color:#fff;font-weight:400">
           <a id="headerLogo" href="/" class="header__logo" style="font-weight:400">
-            Nifty Zoo
+            Muttville
           </a>
           <nav id="headerNav" class="header__nav">
             <a href="/pricing" class="btn btn--c btn--plain" style="color:rgba(255,255,255,1)">
