--- a/crypto-zoo-save/index.html
+++ b/crypto-zoo-save/index.html
@@ -7,7 +7,7 @@
     </title>
     <meta name="description" content="This description shows when you share a link to your page on Facebook or Twitter."/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <link rel="icon" href="favicon.ico"/>
+    <link rel="icon" href="dog_icon.png"/>
     <link rel="stylesheet" href="styles.css"/>
     <link href="https://fonts.googleapis.com/css?family=Bevan|Open+Sans:400,600,700" rel="stylesheet"/>
   </head>
